# rust-projects

./: .gitignore
_10_heap/: Cargo.toml
_10_heap/src/: lib.rs  main.rs
_11_design_patterns/: notes.txt
_12_threadpool/: Cargo.toml
_12_threadpool/src/: lib.rs  main.rs
_13_load_balancer/: Cargo.toml  notes.txt
_13_load_balancer/src/: main.rs
_14_pcap_read/: Cargo.toml
_14_pcap_read/src/: main.rs  main.rs.tmp
_15_graph_theory/_1_graph/: Cargo.toml
_15_graph_theory/_2_dfs/: Cargo.toml
_15_graph_theory/_3_bfs/: Cargo.toml
_15_graph_theory/_4_tree_center/: Cargo.toml
_15_graph_theory/_5_isomorphic_trees/: Cargo.toml
_16_pokedex/: Cargo.toml
_17_circular_buffer/: Cargo.toml
_18_avl_trees/: Cargo.toml
_19_dining_phil/: Cargo.toml
_1_cli/: Cargo.toml
_20_mini_bitcoin/: Cargo.toml  README.md
_21_web_scrapper/: Cargo.toml
_2_todo/: Cargo.toml  schema.sql  tasks.db
_3_countries_data/: Cargo.toml  countries.json  india.json  switzerland.json
_4_fetch_news/: Cargo.toml
_5_bst/: Cargo.toml
_6_trie/: Cargo.toml
_7_tic_tac_toe/: Cargo.toml
_8_lru_cache/: Cargo.toml
_9_SOLID/: notes.txt
tut/_14_libp2p/: Cargo.toml
tut/_14_libp2p/src/_1_ping/: main.rs
tut/_14_libp2p/src/_2_mdns/: main.rs
tut/_14_libp2p/src/_3_chat/: main.rs
tut/_15_axum/: .env  Cargo.toml  database.sql  example.txt
tut/_15_axum/src/twillo_tut/: main.rs  routes.rs
tut/_15_axum/src/twillo_tut/models/: state.rs  user.rs
tut/_15_axum/src/twillo_tut_db/: main.rs  routes.rs
tut/_15_axum/src/twillo_tut_db/models/: mod.rs  state.rs  user.rs
(+194 files in other folders)
